# custom-agency-swarms

./: .cursorignore  .gitignore  .pre-commit-config.yaml  README.md  custom-agency-swarms.code-workspace  pyproject.toml  settings.json
DataGents/: Analysts.py
DataGents/instructions/: ceo.py  dev.py
JobProposalGents/: JobProposalGents.py  settings.json  tools.py
JobProposalGents/apis/: upwork_scratch.py
JobProposalGents/instructions/: __init__.py  ceo.py  cover_letter.py  dev.py  writer.py
JobProposalGents/user_files/: user_overview_file-8r3KoHWpfbbZIT2Br2632JJh.md  user_projects_file-TFOckzex7Hua1HrNLPMBQzcK.md
custom_agency_swarms/CodeGents/: Coders.py
custom_agency_swarms/CodeGents/instructions/: __init__.py  analyst.py  ceo.py  code_reviewer.py  dev.py  manifesto.md  py_dev.py  req_analyst.py  sys_architect.py  sys_designer.py
custom_agency_swarms/DataGents/: Analysts.py  test_transcript.txt
custom_agency_swarms/DataGents/instructions/: __init__.py  analyst.py  ceo.py  data_manifesto.md  data_manifesto_1.md  dev.py  fintech_manifesto.md
custom_agency_swarms/JobProposalGents/: manifesto.md
custom_agency_swarms/JobProposalGents/instructions/: analyst.py  editor.py  researcher.py
custom_agency_swarms/JobProposalGents/user_files/: user_skills_file-fLiXBNccjZHhNmdXN5qjqLr8.md
custom_agency_swarms/TerritoryGents/instructions/: ceo.py
custom_agency_swarms/WebBrowsing/: web_browsing_agent.py
custom_agency_swarms/scripts/: manage_assistants.py  manage_files.py
custom_agency_swarms/tools/: __init__.py  browsing.py  coding_tools.py  job_tools.py
custom_agency_swarms/utils/: assistant_helper.py  file_helper.py  helper.py  workdir.py
tests/coding_tasks/: test_tasks.py
tests/integration/: dummy_add.txt  dummy_del.txt  dummy_init.txt  test_assistant_endpoints.py  test_file_endpoints.py
tools/: browsing.py  coding_tools.py
utils/: workdir.py
