[tool.poetry]
name = "custom-agency-swarm"
version = "0.0.0"
description = "swarm play"
authors = ["VRSEN"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.0"
openai = "1.3.0"
instructor = "0.3.4"
deepdiff = "6.7.1"
termcolor = "2.3.0"
gradio = "^4.7.1"
langchain = "^0.0.345"
python-dotenv = "1.0.0"
# agency-swarm = { git = "https://github.com/VRSEN/agency-swarm.git" }
jsonref = "1.1.0"
matplotlib = "^3.8.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
jupytext = "^1.15.2"
pre-commit = "^3.5.0"
agency-swarm = { path = "../agency-swarm", develop = true } # for local development

[tool.poetry.group.fintech.dependencies]
yfinance = "^0.2.33"
pandas = "^2.1.4"

[tool.poetry.group.web.dependencies]
duckduckgo-search = "^4.1.1"
selenium-stealth = "^1.0.6"
webdriver-manager = "^4.0.1"
selenium = "^4.16.0"
requests-oauthlib = "^1.3.1"
python-upwork-oauth2 = "^3.1.0"


[tool.poetry.group.semantic-kernel.dependencies]
semantic-kernel = "^0.4.5.dev0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
